# robustify

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml
Noise/: _filter.py  continuous.py  continuousNoise.py  discrete.py
Robustness/: Perturbation.py  RandomNoise.py  __testRandomNoise.py  _importances.py  _plot.py  _readData.py  _sampling.py  _scorers.py  _train.py  createAndSaveModel.py  figure5.py  noiseCorruptions.py  noiseCorruptions_2.py  noiseCorruptions_3.py  permutationImportance.py  readData.py  relativeLossOfAccuracy.py  runNoiseCorrution.py  runPermutation.py  testNoiseCorrution.py  testPermutation.py  testPerturbation.py  testRandomNoise.py  testRobustnessFramework.py
Robustness/utils/: _importances.py  _plot.py  _predict.py  _sampling.py  _scorers.py  _train.py  _transform.py
Setup/: _readData.py  createAndSaveModel.py
robustify/: __init__.py  noiseCorruptions.py  noise_corruptions.py
robustify/noise/: continuous.py  discrete.py
robustify/utils/: __init__.py  _filter.py  _importances.py  _plot.py  _predict.py  _progress.py  _sampling.py  _scorers.py  _train.py  _transform.py
tests/: testRobustness.py  test_gaussianNoise.py  test_importances.py  test_poissonNoise.py  test_sampling.py  test_scikt-learn_compatibility.py  test_tensorflow_keras_compatibility.py  test_transform.py
