[tool.poetry]
name = "masterthesis"
version = "0.1.0"
description = ""
authors = ["Isabel <isafoster@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
sklearn = "^0.0"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
tqdm = "^4.64.1"
plotly = "^5.11.0"

[tool.poetry.dev-dependencies]
numpy = "^1.23.4"
sklearn = "^0.0"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
